# WrongGPT

./: README.md  pyproject.toml
wronggpt/: __main__.py  utils.py
